Fixed aligning left
Zip code now works. Added max-width to labels and they align properly.

--- a/css/base.css
+++ b/css/base.css
@@ -60,7 +60,8 @@ legend {
 }
 
 
-fieldset.topField {
+fieldset.topField,
+fieldset.bottomField {
   margin-top: 50px;
 }
 
@@ -186,19 +187,12 @@ footer {
 	  }
 
     select {
-      margin-left: -18px;
+      margin-left: 0;
     }
 
     .flex-wrapper > div {
-
         align-items: center;
         display: flex;
-        justify-content: space-between;
-
-    }
-
-    label {
-      flex: 1;
     }
 
     input[type="text"],
@@ -211,18 +205,20 @@ footer {
       margin-top: 0;
     }
 
-    input, select {
-      flex: 2;
-      flex-shrink: 3;
-      flex-grow: 3; 
+    div > label {
+      max-width: 150px;
     }
 
-    input[name*="user_zip"] {
-      flex-shrink: 0;
-      flex-grow: 0;
-      flex-direction: row;
-      width: 175px;
+    div > input,
+    div > select,
+    div > label {
+      flex: 1;
+      justify-content: flex-start;
+      justify-content: space-between;
     }
 
+    div > input[name*="user_zip"] {
+      max-width: 150px;
+    }
 
 }
